--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ ext {
 dependencies {
 	implementation 'com.vaadin:vaadin-spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-devtools:2.7.13'
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
 }
 
 dependencyManagement {
